--- a/4.html
+++ b/4.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
+
 <head>
-  <title>RINGU - Hobby</title>
+  <title>RINGU - My Friends</title>
   <meta charset="utf-8">
 </head>
+
 <body>
   <h1><a href="index.html">RINGU</a></h1>
   <ol>
@@ -12,9 +14,16 @@
     <li><a href="3.html">Character</a></li>
     <li><a href="4.html">My Friends</a></li>
   </ol>
-<h2>Hobby</h2>
-<img src="lol.jpg" width="300">
-<p>I have many hobbies. First, I like games. Among them, I enjoy League of Legends. And SNS is also active. <br>I think I go into Instagram dozens of times a day.</p>
+<h2>My Friends (malza's subordinates)</h2>
+<img src="h.jpg" width="200">
+<img src="j.jpg" width="200">
+<img src="n.jpg" width="200">
+<img src="c.jpg" width="120">
+← She's the owner
+
+<p>
+  <h1> I Love You.♥♥♥</h1></p>
 
 </body>
+
 </html>
