--- a/1.html
+++ b/1.html
@@ -1,38 +1,27 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>RINGU - Basic Information</title>
   <meta charset="utf-8">
 </head>
 <body>
 
-  <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>HTML</h2>
+  <h1><a href="index.html">RINGU</a></h1>
+  <ol>
+    <li><a href="1.html">Basic Information</a></li>
+    <li><a href="2.html">Hobby</a></li>
+    <li><a href="3.html">Character</a></li>
+    <li><a href="4.html">My Friends</a></li>
+  </ol>
+<h2>Basic Information</h2>
+<img src="photo1.jpg" width="450">
 <p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
-Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.<p>
-<img src="coding.jpg" width="450">
-
-<div id="disqus_thread"></div>
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/603c75c71c1c2a130d636da9/1evm2o5gk';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+Name: <b>LEE RINGU</b><br>
+Age: 23 years old<br>
+Date of birth: November 17, 1999<br>
+Blood type: A<br>
+Nationality: South Korea<br>
+Family: Mom, Dad, Younger Brother<br>
+YouTube: <a href="https://www.youtube.com/channel/UCpFEjtA9y8Vc-Trnr_606xA/featured">https://www.youtube.com/channel/UCpFEjtA9y8Vc-Trnr_606xA/featured</a>
 </body>
 </html>
