--- a/3.html
+++ b/3.html
@@ -2,21 +2,22 @@
 <html>
 
 <head>
-  <title>WEB1 - JavaScript</title>
+  <title>RINGU - Character</title>
   <meta charset="utf-8">
 </head>
 
-
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>JavaScript</h2>
-JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.[9] JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.<p>
-<img src="coding.jpg" width="450">
+  <h1><a href="index.html">RINGU</a></h1>
+  <ol>
+    <li><a href="1.html">Basic Information</a></li>
+    <li><a href="2.html">Hobby</a></li>
+    <li><a href="3.html">Character</a></li>
+    <li><a href="4.html">My Friends</a></li>
+  </ol>
+<h2>Character</h2>
+<img src="isfp.png" width="200">
+<p>First of all, my mbti is isfp, a curious artist. <br>Just by looking at this, you can roughly guess what my personality will be like. <br>I'm very shy to strangers and naughty to my people. <br>Sometimes I want to change my personality, but I want to love myself like this!</p>
+
 </body>
 
 </html>
