--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - Welcome</title>
+  <title>RINGU - Welcome</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>WEB</h2>
-Internet guides. Wikipedia articles should not exist only to describe the nature, appearance or services a website offers, but should also describe the site in an encyclopedic manner, offering detail on a website's achievements, impact or historical significance, which can be kept significantly more up-to-date than most reference sources, since editors can incorporate new developments and facts as they are made known. See the Current events portal for examples.<p>
+  <h1><a href="index.html">RINGU</a></h1>
 
+  <img src="photo1.jpg" width="300">
+
+<h2>Lee A Rin</h2>
+Hi. My name is Lee Arin. To commemorate the perfect course in html, I made a website to introduce myself.<br>I'm not good enough, but I hope you enjoy it.
+I wrote English because English was cooler.<p>
+<br>
+<h3>Index</h3>
+  <ol>
+    <li><a href="1.html">Basic Information</a></li>
+    <li><a href="2.html">My Hobby</a></li>
+    <li><a href="3.html">My Character</a></li>
+    <li><a href="4.html">My Friends</a></li>
+  </ol>
 </body>
 </html>
